--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,13 +8,24 @@
     <link rel="stylesheet" href="style.css">
     <title>Sports Grid</title>
 </head>
+
 <body>
     <header>
         <h1>Sports Grid</h1>
     </header>
-    
+
     <main class="container">
+        <img src="./assets/baseball.jpeg" alt="baseball" width="274" height="184">
+        <img src="./assets/diving.jpeg" alt="diving" width="275" height="183">
+        <img src="./assets/football.jpeg" alt="football" width="272" height="185">
+        <img src="./assets/golf.jpg" alt="golf" width="768" height="511">
+        <img src="./assets/hockey.jpg" alt="hockey" width="1200" height="800">
+        <img src="./assets/racing.jpg" alt="racing" width="795" height="530">
+        <img src="./assets/swimming.jpeg" alt="swimming" width="1000" height="667">
+        <img src="./assets/tennis.jpg" alt="tennis" width="780" height="520">
+        <img src="./assets/volleyball.jpeg" alt="volleyball" width="276" height="183">
     </main>
-    
+
 </body>
+
 </html>
